# dspy-playground

./: README.md
dspy-basic/: pyproject.toml
dspy-basic/configs/: dev.json
dspy-basic/dspy_basic/: intro1.py
dspy-basic/tests/: test_intro1.py
